--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href=css\style.css>
+    <link rel="stylesheet" href=style.css>
     <title>Alberto Najera-contact</title>
 </head>
 
@@ -42,5 +42,6 @@
         </footer>
     </div>
 </body>
+
 
 </html>
