--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href=css\style.css>
+    <link rel="stylesheet" href=style.css>
     <title>Alberto Najera-home</title>
 </head>
 
@@ -63,5 +63,6 @@
         </footer>
     </div>
 </body>
+
 
 </html>
