--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href=css\style.css>
+    <link rel="stylesheet" href=style.css>
     <title>Alberto Najera-Projects</title>
 </head>
 
@@ -59,5 +59,6 @@
         </footer>
     </div>
 </body>
+
 
 </html>
