Update index.html "Student at Scit"

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h3>About me</h3>
                 <p>hi</p>
                  <h1>Alberto Najera</h1>
-                <p>what came first the egg or the chicken?</p>
+                <p>Student at SCIT.</p>
             </aside>
             <h2>Technical Skills</h2>
             <table>
@@ -66,3 +66,4 @@
 
 
 </html>
+
